# studycat-service

./: .env.example  .gitmodules  Makefile  README.md  config.py  dataset.py  dataset_loader.py  irt_adapter.py  main.py  pyproject.toml  requirements.txt  routers.py  schemas.py  session_service.py  studycat_cli_adaptive.py  unidimensional.py  unidimensional_test.py
.github/workflows/: ci.yml
data/: interactive_example.py  load_excel.py  load_item_pool.py
db/: client.py  repo.py  seed.py  test_db.py
engine/: adapter.py
models/: README.md  example.py  multidimensional.py  unidimensional.py  unidimensional_test.py
scripts/: setup-submodules.sh
service/: core.py  core_hardcoded.py
src/studycat_service/: main.py  routers.py
src/studycat_service/db/: client.py  repo.py
src/studycat_service/engine/: adapter.py
src/studycat_service/service/: core.py
tests/: __init__.py  conftest.py  test_adapter_build.py  test_core.py  test_item_pool.py  test_item_selection.py  test_mastery_detection.py  test_theta.py
